@startuml
skinparam classAttributeIconSize 0

package pec {
    abstract class Event {
    # event_time: double
    # event_type: String
    # simulation: Simulation
    # rand: Random

    + setEventTime(mean: double): void
    + setEventTime(time: double, manual: String): void
    + getEventTime(): double
    + getEventType(): String
    + setEventType(type: String): void
    - expDistribution(mean: double): double
    + addEventTimeToSimulation(): void
    + compareTo(o: Event): int
  }

    interface IEvent {
        +setEventTime(mean: double): void
        +getEventTime(): double
        +getEventType(): String
        +setEventType(type: String): void
        +addEventTimeToSimulation(): void
        +executeEvent(): void
    }

    class PEC {
        -eventList: LinkedList<Event>
        {static} -instance: PEC
        - PEC()
        {static} + getPEC(): PEC
        + getNextEvent(): Event
        + addEvent(newEvent: Event): void
    }
}

Event <|.. IEvent
PEC --* "1" Event

@enduml